--- a/product-selector/.prettierrc.json
+++ b/product-selector/.prettierrc.json
@@ -2,6 +2,6 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
   "semi": true,
-  "singleQuote": true,
+  "singleQuote": false,
   "arrowParens": "avoid"
 }
